# krea2-structured-prompt

./: .gitattributes  .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
.github/workflows/: publish-comfyui-registry.yml
js/: krea2_structured_prompt.js
